# cortexflow-ai-workbench

./: .env.example  .gitignore  Makefile  PROJECT_MANIFEST.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: cli.py  dependencies.py  main.py
app/agents/: computer_use.py  multi_agent.py  patterns.py  planner.py  policies.py  runner.py  tools.py
app/api/: routes.py
app/coding/: workflow.py
app/context/: engine.py
app/core/: config.py  schemas.py
app/evals/: metrics.py  runner.py
app/llm/: providers.py
app/mcp/: client.py  server.py
app/memory/: store.py
app/rag/: chunker.py  pipeline.py  text.py  vector_store.py
app/rl/: bandit.py
app/storage/: json_store.py
app/system_design/: blueprints.py
app/training/: dataset_builder.py
data/eval_sets/: rag_eval.json
data/runtime/: .keep.json
data/sample_docs/: agent_tool_safety.md  ai_engineer_2026_stack.md  context_rl_computer_use.md  memory_state_multiagent.md  rag_eval_policy.md
docs/: 01_architecture.md  02_topic_coverage.md  03_project_walkthrough.md  04_interview_defense.md  05_learning_notes_from_uploaded_pack.md  06_extension_ideas.md  github_profile_readme_update.md  github_repo_description.md  linkedin_post.md  source_files_reviewed.md
scripts/: export_sft_dataset.py  smoke_demo.py
tests/: test_agent.py  test_bandit.py  test_evals.py  test_mcp.py  test_retrieval.py  test_training.py
ui/: streamlit_app.py
